kubernetes/namespaces/default/garage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: garage
  template:
    metadata:
      labels:
        app: garage
    spec:
      containers:
        - image: dxflrs/garage:v2.3.0
          imagePullPolicy: IfNotPresent
          name: garage
          command:
            - /garage
          args:
            - server
          ports:
            - containerPort: 3900
              name: s3-api
            - containerPort: 3901
              name: rpc
            - containerPort: 3902
              name: s3-web
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
            - name: meta
              mountPath: /mnt/meta
            - name: data
              mountPath: /mnt/data
          readinessProbe:
            tcpSocket:
              port: 3900
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3901
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: garage-config
        - name: meta
          persistentVolumeClaim:
            claimName: garage-meta
        - name: data
          persistentVolumeClaim:
            claimName: garage-data
