kubernetes/namespaces/default/garage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: garage
spec:
  selector:
    app: garage
  ports:
    - name: s3-api
      port: 3900
      targetPort: s3-api
    - name: s3-web
      port: 3902
      targetPort: s3-web
    - name: admin
      port: 3903
      targetPort: admin
